--- a/index.html
+++ b/index.html
@@ -185,19 +185,66 @@
       applyTilt((x - 0.5) * 2, (y - 0.5) * 2);
     });
 
-    // create floating hearts
-    for (let i=0;i<14;i++){
-      const h = document.createElement('div');
-      h.className='heart';
-      const x = (Math.random()*120-60).toFixed(1)+'%';
-      const s = (0.6+Math.random()*1.3).toFixed(2);
-      h.style.setProperty('--x', x);
-      h.style.setProperty('--s', s);
-      h.style.left = (Math.random()*100).toFixed(1)+'%';
-      h.style.animationDelay = (-Math.random()*6).toFixed(2)+'s';
-      h.style.opacity = (0.35+Math.random()*0.5).toFixed(2);
-      stage.appendChild(h);
+    // floating hearts with simple physics (react to shaking)
+    const hearts = [];
+    for (let i = 0; i < 16; i++) {
+      const el = document.createElement('div');
+      el.className = 'heart';
+      el.style.left = (Math.random() * 100).toFixed(1) + '%';
+      el.style.top = (60 + Math.random() * 30).toFixed(1) + '%';
+      el.style.opacity = (0.35 + Math.random() * 0.55).toFixed(2);
+      stage.appendChild(el);
+
+      hearts.push({
+        el,
+        x: (Math.random() * 2 - 1) * 40,
+        y: (Math.random() * 2 - 1) * 40,
+        vx: (Math.random() * 2 - 1) * 0.8,
+        vy: -(0.6 + Math.random() * 1.4),
+        rot: Math.random() * 360,
+        vr: (Math.random() * 2 - 1) * 2.5,
+        s: 0.6 + Math.random() * 1.2,
+      });
     }
+
+    let impulseX = 0, impulseY = 0;
+    function onDeviceMotion(e) {
+      const a = e.accelerationIncludingGravity || e.acceleration || { x: 0, y: 0 };
+      const ax = Math.max(-18, Math.min(18, a.x || 0));
+      const ay = Math.max(-18, Math.min(18, a.y || 0));
+      // scale down to px impulse
+      impulseX = ax * 0.08;
+      impulseY = -ay * 0.08;
+    }
+
+    const bounds = { x: 220, y: 160 };
+    function tick() {
+      for (const h of hearts) {
+        h.vx += impulseX;
+        h.vy += impulseY;
+
+        // buoyancy + damping
+        h.vy += -0.01;
+        h.vx *= 0.985;
+        h.vy *= 0.985;
+
+        h.x += h.vx;
+        h.y += h.vy;
+        h.rot += h.vr;
+
+        // bounce inside bounds
+        if (h.x < -bounds.x) { h.x = -bounds.x; h.vx *= -0.75; }
+        if (h.x >  bounds.x) { h.x =  bounds.x; h.vx *= -0.75; }
+        if (h.y < -bounds.y) { h.y = -bounds.y; h.vy *= -0.75; }
+        if (h.y >  bounds.y) { h.y =  bounds.y; h.vy *= -0.75; }
+
+        h.el.style.transform = `translate3d(${h.x}px, ${h.y}px, 0) rotate(${45 + h.rot}deg) scale(${h.s})`;
+      }
+      impulseX *= 0.92;
+      impulseY *= 0.92;
+      requestAnimationFrame(tick);
+    }
+    requestAnimationFrame(tick);
 
     function onDeviceOrientation(e){
       hasMotion = true;
@@ -219,7 +266,12 @@
           const perm = await DeviceOrientationEvent.requestPermission();
           if (perm !== 'granted') throw new Error('permission denied');
         }
+        if (typeof DeviceMotionEvent !== 'undefined' && typeof DeviceMotionEvent.requestPermission === 'function'){
+          const perm2 = await DeviceMotionEvent.requestPermission();
+          if (perm2 !== 'granted') throw new Error('permission denied');
+        }
         window.addEventListener('deviceorientation', onDeviceOrientation, true);
+        window.addEventListener('devicemotion', onDeviceMotion, true);
         // give it a moment
         setTimeout(()=>{
           if (!hasMotion){
