--- a/index.html
+++ b/index.html
@@ -187,13 +187,21 @@
 
     // floating hearts with simple physics (react to shaking)
     const hearts = [];
-    for (let i = 0; i < 16; i++) {
+    // cover the whole screen area (not only the card)
+    const world = document.createElement('div');
+    world.style.position = 'fixed';
+    world.style.inset = '0';
+    world.style.pointerEvents = 'none';
+    world.style.zIndex = '1';
+    document.body.appendChild(world);
+
+    for (let i = 0; i < 42; i++) {
       const el = document.createElement('div');
       el.className = 'heart';
       el.style.left = (Math.random() * 100).toFixed(1) + '%';
-      el.style.top = (60 + Math.random() * 30).toFixed(1) + '%';
-      el.style.opacity = (0.35 + Math.random() * 0.55).toFixed(2);
-      stage.appendChild(el);
+      el.style.top = (Math.random() * 100).toFixed(1) + '%';
+      el.style.opacity = (0.25 + Math.random() * 0.6).toFixed(2);
+      world.appendChild(el);
 
       hearts.push({
         el,
@@ -217,7 +225,11 @@
       impulseY = -ay * 0.08;
     }
 
-    const bounds = { x: 220, y: 160 };
+    // bounds based on viewport
+    let bounds = { x: window.innerWidth * 0.55, y: window.innerHeight * 0.55 };
+    window.addEventListener('resize', () => {
+      bounds = { x: window.innerWidth * 0.55, y: window.innerHeight * 0.55 };
+    });
     function tick() {
       for (const h of hearts) {
         h.vx += impulseX;
